# open-leo-latency-routing

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
docs/: baseline_results_summary.md  candidate_manifest.md  dataset_data_card.md  open_leo_latency_routing_scope.md  robustness_results_summary.md
results/: candidate_manifest.csv  candidate_manifest.json  dataset_inventory.json
results/ablation_evaluation/: ablation_policy_confidence_intervals.csv  ablation_policy_significance.csv  ablation_policy_summary.csv  ablation_policy_window_results.csv
results/decision_policy_evaluation/: decision_policy_significance.csv  decision_policy_summary.csv  decision_policy_window_results.csv
results/graph_forecasting/: graph_forecast_metrics.csv  graph_forecast_predictions.csv  graph_forecast_run_metadata.json
results/robustness_evaluation/: consensus_penalty_sweep.csv  consensus_policy_tuning.csv  decision_policy_robustness_significance.csv  decision_policy_robustness_summary.csv  decision_policy_robustness_window_results.csv  decision_window_context.csv  disagreement_uncertainty_summary.csv  graph_forecast_robustness_metrics.csv  temporal_forecast_robustness_metrics.csv
results/sanity_checks/: session_holdout_forecast_folds.csv  (+1 more)
scripts/: build_data_card.py  build_manifest.py  build_ping_tables.py  generate_result_figures.py  inspect_dataset.py  run_ablation_evaluation.py  run_decision_policy_evaluation.py  run_graph_forecasting.py  run_robustness_evaluation.py  run_session_holdout_sanity.py  run_temporal_forecasting.py
(+25 files in other folders)
