[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-leo-latency-routing"
version = "0.1.0"
description = "Reproducible pipeline for predictive latency-aware path selection on open LEO measurements."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
